# acronymBot

./: README.md  acronymBot.py  acronyms.csv  pyproject.toml
